src/views/styles/registrationpage.css
body {
    margin: 0;
    padding: 0;
    background: #7b2cbf;
    font-family: "Comic Sans MS", cursive, sans-serif;
}

.container {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.title {
    color: white;
    font-size: 32px;
    margin-bottom: 20px;
}

.form-box {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.input-field {
    width: 260px;
    padding: 12px;
    border: none;
    border-radius: 8px;
    font-size: 18px;
    background: linear-gradient(90deg, #ff7eb3, #ffdd65);
    color: black;
}

.input-field::placeholder {
    color: black;
}

.password-wrapper {
    position: relative;
    width: 260px;
}

.show-btn {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    background: none;
    border: none;
    font-size: 18px;
    cursor: pointer;
}

.register-btn {
    width: 150px;
    padding: 10px;
    margin: 0 auto;
    border: none;
    border-radius: 8px;
    font-size: 20px;
    cursor: pointer;
    background: linear-gradient(90deg, #ff7eb3, #ffdd65);
    color: black;
    transition: 0.2s;
}

.register-btn:hover {
    transform: scale(1.05);
}
.captcha-box {
    display: flex;
    align-items: center;
    gap: 10px;
    background: linear-gradient(90deg, #ff7eb3, #ffdd65);
    padding: 10px;
    width: 260px;
    border-radius: 8px;
    justify-content: space-between;
}

#captchaText {
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 3px;
}

#refreshCaptcha {
    background: none;
    border: none;
    font-size: 20px;
    cursor: pointer;
}

